2007-08-16  Tobias Burnus  <burnus@net-b.de>

PR fortran/33072
	* module.c (gfc_match_use): Mark user operators as such.
	(find_use_name_n): Distinguish between operators and other symbols.
	(find_use_name,number_use_names,mio_namelist,
	 load_operator_interfaces,load_generic_interfaces,read_module,
	 write_generic): Update find_use_name_n calls.

2007-08-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/33072
	* gfortran.dg/use_9.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127564 138bc75d-0d04-0410-961f-82ee72b054a4